--- a/root/scss/2_component/_09_other.scss
+++ b/root/scss/2_component/_09_other.scss
@@ -107,7 +107,7 @@
 .c-button{
 	@include flex-center;
 	text-align: center;
-	margin: 0 0 3rem;
+	margin: 0;
 	width: 100%;
 	color: #fff;
     background-color: #01395e;
@@ -283,8 +283,11 @@
 					bottom: 0;
 					right: 0;
 					width: 90%;
-					height: 90%;
+					height: 94%;
 					margin: 0 auto;
+				}
+				p{
+					text-align: center;
 				}
 		}
 	}
@@ -321,8 +324,8 @@
 		}
 	}
 	&_img{
-		width: 150px;
-		height: 150px;
+		width: 80px;
+		height: 80px;
 		margin: 0 auto;
 		position: relative;
 		img{
@@ -378,6 +381,81 @@
 		margin: 2rem auto;
 	}
 }
+.m-center{
+	text-align: center !important;
+}
+.m-position{
+	&::after{
+		height: 0 !important;
+	}
+}
+.position-relative {
+    position: relative!important;
+}
+.position-absolute {
+    position: absolute!important;
+}
+.c-customers{
+	background-color: #f5f8fa;
+    padding: 5rem 0;
+	&_inner{
+		@include flex-jbetween;
+		flex-wrap: wrap;
+		dl{
+			width: calc(50% - 20px);
+			margin: 2rem 10px;
+			@include sp{
+				width: 100%;
+			}
+			h3{
+				@include ttl3;
+				font-size: 5rem;
+				text-align: left;
+				margin-bottom: 2rem;
+				@include sp{
+					font-size: 3rem;;
+				}
+			}
+			p{
+				font-size: 2rem;
+				@include sp{
+					font-size: 1.8rem;;
+				}
+			}
+		}
+	}
+	&_list{
+		@include flex-jbetween;
+		flex-wrap: wrap;
+		li{
+			width: calc(25% - 20px);
+			margin: 0 10px;
+			@include sp{
+				width: calc(50% - 10px);
+				margin: 10px 5px;
+			}
+			padding: 30px 20px;
+			border-radius: 15px;
+			background-color: #fff;
+			border: solid 1px #ededed;
+			&:hover{
+				box-shadow: 0 10px 50px -5px rgba(51, 71, 91, 0.12);
+    			transform: scale(1.02);
+			}
+		}
+	}
+	&_ttl{
+		@include flex;
+		align-items: center;
+		img{
+			width: 40px;
+			margin-right: 1rem;
+		}
+		font-size: 2rem;
+		line-height: 1.2;
+		margin-bottom: 2rem;
+	}
+} 
 @keyframes pulse_animation {
 	0% { transform: scale(1); }
 	30% { transform: scale(1); }
