--- a/root/pug/index.pug
+++ b/root/pug/index.pug
@@ -95,7 +95,7 @@ block container
         img.lazyload(loading="lazy", data-src=path+"assets/images/user02.jpg", src=path+"assets/images/user02.jpg" alt="")
       .c-boss_content
         h3.m-center.m-position Our Mission
-        p There's this notion that to grow a business, you have to be ruthless. But we know there's a better way to grow. One where what's good for the bottom line is also good for customers. We believe businesses can grow with a conscience, and succeed with a soul — and that they can do it with inbound. That's why we've created an ecosystem uniting software, education, and community to help businesses grow better every day. 
+        p There's this notion that to grow a business, you have to be ruthless. But we know there's a better way to grow. One where what's good for the bottom line is also good for customers. We believe businesses can grow with a conscience, and succeed with a soul — and that they can do it with inbound. That's why we've created an ecosystem uniting software, education, and community to help businesses grow better every day.
 
   .c-solution
     .l-container
@@ -129,38 +129,42 @@ block container
     a.c-button_inner.bounceIn(href="https://api.leadconnectorhq.com/widget/appointment/preciouslifeagent/retirement-consultation", target="_blank")
         p Bạn có muốn làm chủ tương lai?
         p Đừng ngần ngại tìm hiểu cùng Jolie!
-   
+
   .c-customers
-    .l-container 
+    .l-container
       .c-customers_inner
-        dl 
-          dd 
+        dl
+          dd
             h3 There are 1000+ customers who have chosen to accompany Jolie, because:
-            p  Put customers first, choose the types of insurance and financial funds that fit your budget and help you achieve maximum benefits in the future.  
-        dl 
-          dd 
+            p  Put customers first, choose the types of insurance and financial funds that fit your budget and help you achieve maximum benefits in the future.
+        dl
+          dd
             img.lazyload(loading="lazy", data-src=path+"assets/images/user02.jpg", src=path+"assets/images/user02.jpg" alt="")
       ul.c-customers_list
-        li   
-          .c-customers_ttl  
+        li
+          .c-customers_ttl
             img.lazyload(loading="lazy", data-src=path+"assets/images/shield.png" src=path+"assets/images/shield.png")
             h3 Trusted Partners
           p Jolie's agent and team contract with many reputable financial companies in the market to bring you the best products
+          a(href) Sự khác biệt cơ bản của người trưởng thành so với lứa tuổi mới lớn, theo ông, là ở đâu, nếu không chỉ là cách yêu?
         li
-          .c-customers_ttl  
+          .c-customers_ttl
             img.lazyload(loading="lazy", data-src=path+"assets/images/customer-service.png" src=path+"assets/images/customer-service.png")
             h3 #1 Customer Service
           p Jolie has always had the ideal of giving and serving, so Jolie always strives to bring satisfaction and the best experience to customers from the first time they meet.
+          a(href) Sự khác biệt cơ bản của người trưởng thành so với lứa tuổi mới lớn, theo ông, là ở đâu, nếu không chỉ là cách yêu?
         li
-          .c-customers_ttl  
+          .c-customers_ttl
             img.lazyload(loading="lazy", data-src=path+"assets/images/badge.png" src=path+"assets/images/badge.png")
             h3 Professional
           p Professional process and a team of rich professionals are always ready to advise and support customers on any insurance-related issues.
+          a(href) Sự khác biệt cơ bản của người trưởng thành so với lứa tuổi mới lớn, theo ông, là ở đâu, nếu không chỉ là cách yêu?
         li
-          .c-customers_ttl  
+          .c-customers_ttl
             img.lazyload(loading="lazy", data-src=path+"assets/images/best-seller.png" src=path+"assets/images/best-seller.png")
             h3 Best Offer
-          p Thoroughly learn about the wishes and capabilities of the customer to come up with the most suitable and optimal financial fund for the customer's needs. To enable screen reader support, press Ctrl+Alt+Z To learn about keyboard shortcuts, press Ctrl+slash  
+          p Thoroughly learn about the wishes and capabilities of the customer to come up with the most suitable and optimal financial fund for the customer's needs. To enable screen reader support, press Ctrl+Alt+Z To learn about keyboard shortcuts, press Ctrl+slash
+          a(href) Sự khác biệt cơ bản của người trưởng thành so với lứa tuổi mới lớn, theo ông, là ở đâu, nếu không chỉ là cách yêu?
   //- .c-trust
     //-     h3 There are 1000+ customers who have chosen to accompany Jolie, because:
     //-     p  Put customers first, choose the types of insurance and financial funds that fit your budget and help you achieve maximum benefits in the future.
