--- a/root/scss/2_component/_09_other.scss
+++ b/root/scss/2_component/_09_other.scss
@@ -297,9 +297,6 @@
 	width: 1150px;
 	margin: 3rem auto 4rem;
 	.owl-carousel{
-		// max-width: 100vw;
-		// width: 100%;
-		// position: relative;
 		margin: 0 auto;
 	}
 	h3{
@@ -428,19 +425,29 @@
 		@include flex-jbetween;
 		flex-wrap: wrap;
 		li{
-			width: calc(25% - 20px);
-			margin: 0 10px;
+			width: calc(25% - 50px);
+			margin: 0 25px;
 			@include sp{
 				width: calc(50% - 10px);
 				margin: 10px 5px;
 			}
-			padding: 30px 20px;
+			padding: 40px 30px 20px;
 			border-radius: 15px;
 			background-color: #fff;
 			border: solid 1px #ededed;
+			flex-direction: column;
+			@include flex-jbetween;
 			&:hover{
 				box-shadow: 0 10px 50px -5px rgba(51, 71, 91, 0.12);
-    			transform: scale(1.02);
+    		transform: scale(1.02);
+			}
+			a{
+				padding-top: 2rem;
+				text-decoration: none;
+				color: #0091ae;
+				font-weight: 500;
+				font-size: 1.4rem;
+				display: block;
 			}
 		}
 	}
@@ -453,9 +460,9 @@
 		}
 		font-size: 2rem;
 		line-height: 1.2;
-		margin-bottom: 2rem;
+		margin-bottom: 3rem;
 	}
-} 
+}
 @keyframes pulse_animation {
 	0% { transform: scale(1); }
 	30% { transform: scale(1); }
