--- a/root/pug/index.pug
+++ b/root/pug/index.pug
@@ -73,7 +73,7 @@ block container
               h1 THE ULTIMATE GETAWAY VEHICLE
               p
                 | With speed, control, and confidence on any terrain, Diverge is the most capable gravel bike ever made. Switching from Midwest gravel at Mach 5 to rutted single track with ease, nothing helps you escape faster than Diverge.
-              a.button(href='https://api.leadconnectorhq.com/widget/appointment/preciouslifeagent/retirement-consultation', target="_blank") Đăng Ký Tư Vấn
+              a.button(href='https://api.leadconnectorhq.com/widget/appointment/preciouslifeagent/retirement-consultation', target="_blank") Let's Talk
         .swiper-slide
           .swiper-image(style="background: url(../../assets/images/banner01.png) no-repeat center center; background-size:cover;")
           .overlay
@@ -95,7 +95,7 @@ block container
         img.lazyload(loading="lazy", data-src=path+"assets/images/user02.jpg", src=path+"assets/images/user02.jpg" alt="")
       .c-boss_content
         h3.m-center.m-position Our Mission
-        p There's this notion that to grow a business, you have to be ruthless. But we know there's a better way to grow. One where what's good for the bottom line is also good for customers. We believe businesses can grow with a conscience, and succeed with a soul — and that they can do it with inbound. That's why we've created an ecosystem uniting software, education, and community to help businesses grow better every day.
+        p With a substantial amount of knowledge in structuring a policy, backed by an excellent support team, Jolie is committed to help every family to have a comprehensive understanding of the benefits of life insurance. From college funding, retirement saving plan, income protection to living benefits, what life insurance can do is not only to protect you and your loved one during the toughest moment but also to improve significantly the quality of life while you are still living.
 
   .c-solution
     .l-container
@@ -104,8 +104,8 @@ block container
         .content
           p HubSpot’s CRM platform has all the tools and integrations you need for marketing, sales, content management, and customer service. Each product in the platform is powerful alone, but the real magic happens when you use them together.
           .btn
-            a(href) Get free CRM
-            a(href) Demo premium CRM
+            a(href) Let's Talk
+            a(href) Contact us
         ul
           li
             //- .c-solution_tag Tax Planning
